[package]
name = "fractic-aws-s3"
version = "0.1.0"
authors = ["Mart van Buren <mart@fractic.io>"]
edition = "2021"

[dependencies]
async-trait = "0.1.80"
aws-config = "1.5.1"
chrono = "0.4.38"
fractic-core = { git = "https://github.com/fractic-io/rust-core.git" }
fractic-env-config = { git = "https://github.com/fractic-io/rust-env-config.git" }
fractic-server-error = { git = "https://github.com/fractic-io/rust-server-error.git" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4"] }
mockall = "0.12.1"
aws-sdk-s3 = "1.54.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
