[package]
name = "fractic-aws-s3"
version = "0.1.0"
authors = ["Mart van Buren <mart@fractic.io>"]
edition = "2021"

[dependencies]
async-trait = "0.1.80"
aws-config = "1.5.1"
aws-sdk-s3 = "1.54.0"
chrono = "0.4.38"
fractic-context = { git = "https://github.com/fractic-io/rust-context.git" }
fractic-core = { git = "https://github.com/fractic-io/rust-core.git" }
fractic-server-error = { git = "https://github.com/fractic-io/rust-server-error.git" }
mime_guess = "2.0.5"
mockall = "0.12.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
